--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "filament/filament": "^3.0.52",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.23.1",
-        "laravel/tinker": "^2.8.2"
+        "laravel/tinker": "^2.8.2",
+        "livewire/livewire": "^3.0.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23.0",
