--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.23.1",
         "laravel/tinker": "^2.8.2",
-        "livewire/livewire": "^3.0.5"
+        "livewire/livewire": "^3.0.5",
+        "owenvoke/blade-fontawesome": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23.0",
