--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
@@ -12,9 +11,7 @@
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.29",
         "tailwindcss": "^3.3.3",
-        "vite": "^4.0.0"
-    },
-    "dependencies": {
+        "vite": "^4.0.0",
         "blade-formatter": "^1.38.1"
     }
 }
