--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "format": "blade-formatter resources/**/*.blade.php --sort-tailwindcss-classes --sort-html-attributes --write"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.15",
-        "axios": "^1.1.2",
+        "blade-formatter": "^1.38.1",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.29",
         "tailwindcss": "^3.3.3",
-        "vite": "^4.0.0",
-        "blade-formatter": "^1.38.1"
+        "vite": "^4.0.0"
     }
 }
