--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,6 +25,11 @@ jobs:
         run: |
           composer install --no-scripts
 
+      - name: Build Vite assets
+        run: |
+          npm ci
+          npm run build
+
       - name: Setup .env file
         run: |
           cp .env.ci .env
