--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           npm ci
           mkdir -p public/build
+          chmod -R 777 public/build
           npm run build
 
       - name: Setup .env file
